# pytest-matcher

./: .gitignore  GEMINI.md  LICENSE  README.md  README.rst  publish.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  test.yml
pytest_matcher/: approx.py  compare.py  matchers.py  plugin.py
tests/: test_compare.py  test_matchers.py
