[metadata]
name = pytest-matcher
version = attr: pytest_matcher.VERSION
author = Alexander Schepanovski
author_email = suor.web@gmail.com
description = Makes comparing nested data structures easy and glancable
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = tests
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
; zip_safe = False
; include_package_data = True
packages = find:
python_requires = >=3.7
; install_requires =
;     requests

[options.entry_points]
pytest11 =
    matcher = pytest_matcher.plugin

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 7.1.2
